--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
+    "dotenv": "^5.0.1",
+    "nodemon": "^1.17.2",
     "rimraf": "^2.6.2"
   }
 }
