--- a/package.json
+++ b/package.json
@@ -4,29 +4,66 @@
   "description": "nXplorer Babel version",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bin/dev",
-    "clean": "rimraf dist",
-    "build": "npm run clean && mkdir dist && babel server -s -d dist",
-    "production": "npm run build && node bin/production"
+    "test": "cross-env NODE_ENV=test jest --forceExit --config unit.config.json",
+    "start": "node ./build/main.js",
+    "lint": "eslint --fix server __tests__",
+    "dev": "backpack dev",
+    "build": "backpack build",
+    "postinstall": "backpack build",
+    "docs": "documentation build server/** -f html -o docs"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tsukhu/nxplorer-babel.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "tksukhu@gmail.com",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/tsukhu/nxplorer-babel/issues"
   },
   "homepage": "https://github.com/tsukhu/nxplorer-babel#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-eslint": "^8.2.2",
+    "babel-jest": "^23.0.0-alpha.0",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "backpack-core": "^0.7.0",
+    "concurrently": "^3.5.1",
+    "cross-env": "^5.1.4",
+    "documentation": "^6.1.0",
     "dotenv": "^5.0.1",
-    "nodemon": "^1.17.2",
-    "rimraf": "^2.6.2"
+    "eslint": "^4.19.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "graphql-tester": "0.0.5",
+    "jest-cli": "^23.0.0-alpha.0",
+    "jest-sonar-reporter": "^1.3.0",
+    "nodejs-dashboard": "^0.4.3",
+    "prettier": "^1.11.1",
+    "rimraf": "^2.6.2",
+    "shelljs": "^0.8.1",
+    "supertest": "^3.0.0",
+    "wait-port": "^0.2.2"
+  },
+  "dependencies": {
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
+    "express": "^4.16.3",
+    "graphql-yoga": "^1.6.1",
+    "nodemon": "^1.17.2"
+  },
+  "keywords": [
+    "babel",
+    "nxplorer",
+    "microservice",
+    "graphql",
+    "express",
+    "inversifyjs"
+  ],
+  "jestSonar": {
+    "reportPath": "reports",
+    "reportFile": "test-reporter.xml",
+    "indent": 4,
+    "sonar56x": true
   }
 }
