Separated graphql schema and using a webpack loader

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,8 +13,7 @@
       "error",
       {
         "singleQuote": true,
-        "semi": false,
-        "trailingComma": "all"
+        "semi": false
       }
     ]
   }
