--- a/.test.env
+++ b/.test.env
@@ -1,2 +1,4 @@
-SECRET_MESSAGE = Sample message test
-TOKEN = my secret token
+GRAPHQL_PORT = 3000
+GRAPHQL_TRACING = 'http-header'
+GRAPHQL_DEBUG = false
+GRAPHQL_PLAYGROUND = '/'
